Change libvirt dependency to pkg-config one.
Thanks Ruslan Babayev for the patch.

--- a/libvirt-hs.cabal
+++ b/libvirt-hs.cabal
@@ -41,7 +41,7 @@ Library
   
   Build-tools:         c2hs
 
-  Extra-libraries:     "virt"
+  pkgconfig-depends:   libvirt
 
 Source-repository head
   type: git
