--- a/libvirt-hs.cabal
+++ b/libvirt-hs.cabal
@@ -37,7 +37,9 @@ Library
                        System.LibVirt
   
   -- Packages needed in order to build this package.
-  Build-depends:       base >= 4 && < 5, syb >= 0.1.0.2
+  Build-depends:       base >= 4 && < 5
+                     , syb >= 0.1.0.2
+                     , unix
   
   Build-tools:         c2hs
 
