--- a/libvirt-hs.cabal
+++ b/libvirt-hs.cabal
@@ -1,5 +1,5 @@
 Name:                libvirt-hs
-Version:             0.1.2
+Version:             0.1.3
 
 Synopsis:            FFI bindings to libvirt virtualization API (http://libvirt.org)
 
@@ -37,7 +37,9 @@ Library
                        System.LibVirt
   
   -- Packages needed in order to build this package.
-  Build-depends:       base >= 4 && < 5, syb >= 0.1.0.2
+  Build-depends:       base >= 4 && < 5
+                     , syb >= 0.1.0.2
+                     , unix
   
   Build-tools:         c2hs
 
