Update .cabal file.

--- a/libvirt-hs.cabal
+++ b/libvirt-hs.cabal
@@ -5,7 +5,7 @@ Synopsis:            FFI bindings to libvirt virtualization API (http://libvirt.
 
 Description:         This package provides low-level (at this moment, at least) FFI bindings to libvirt library.
 
-Homepage:            http://redmine.iportnov.ru/projects/libvirt-hs
+Homepage:            https://github.com/portnov/libvirt-hs
 
 License:             BSD3
 
@@ -47,5 +47,5 @@ Library
 
 Source-repository head
   type: git
-  location: git://home.iportnov.ru/libvirt-hs.git
+  location: https://github.com/portnov/libvirt-hs.git
   
