--- a/libvirt-hs.cabal
+++ b/libvirt-hs.cabal
@@ -1,3 +1,4 @@
+Cabal-version:       3.4
 Name:                libvirt-hs
 Version:             0.2.3
 
@@ -7,7 +8,7 @@ Description:         This package provides low-level (at this moment, at least) 
 
 Homepage:            https://github.com/portnov/libvirt-hs
 
-License:             BSD3
+License:             BSD-3-Clause
 
 License-file:        LICENSE
 
@@ -27,8 +28,6 @@ Build-type:          Simple
 Extra-source-files:  Test.hs
 
 -- Constraint on the version of Cabal needed to build this package.
-Cabal-version:       >=1.10
-Default-Language: Haskell2010
 
 
 Library
@@ -42,9 +41,10 @@ Library
                      , syb >= 0.1.0.2
                      , unix
   
-  Build-tools:         c2hs
+  Build-tool-depends: cpphs:c2hs
 
   pkgconfig-depends:   libvirt
+  default-language:    Haskell2010
 
 Source-repository head
   type: git
